# routee-compass

./: .buildinfo  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE.md  MANIFEST.in  README.html  README.md  config.html  docs_py.sh  docs_rust.sh  environment.yml  genindex.html  installation.html  intro.html  motivation.html  objects.inv  publish_crates.sh  py-modindex.html  pyproject.toml  python_api_docs.html  query.html  running.html  rust_api_docs.html  search.html  searchindex.js  setup.py  units.html
rust/: Cargo.toml  flamegraph.out  flamegraph_134416_to_321002.out  pyproject.toml
rust/.cargo/: config.toml
rust/compass-app/: Cargo.toml  README.md
rust/compass-app-py/: Cargo.toml  README.md
rust/compass-app-py/src/: app_wrapper.rs  lib.rs
rust/compass-app/src/: cli.rs  lib.rs  main.rs
rust/compass-app/src/app/: app_error.rs  compass_app_error.rs  mod.rs
rust/compass-app/src/app/compass/: compass_app.rs  compass_app_args.rs  compass_configuration_field.rs  compass_input_field.rs  compass_json_extensions.rs  mod.rs
rust/compass-app/src/app/geom/: geom_app.rs
rust/compass-app/src/app/search/: mod.rs  search_algorithm_result.rs  search_app.rs  search_app_result.rs
rust/compass-app/src/config/: app.rs  app_config.rs  config.default.toml  custom_config.toml  graph.rs  mod.rs  plugin.rs  search.rs
rust/compass-app/src/plugin/: mod.rs  plugin_error.rs
rust/compass-app/src/plugin/input/: input_field.rs  input_json_extensions.rs  input_plugin.rs  input_plugin_ops.rs  mod.rs  query.rs  rtree.rs
rust/compass-app/src/plugin/output/: geometry.rs  (+3 more)
rust/compass-core/: Cargo.toml  README.md
rust/compass-core/src/: lib.rs  main.rs
rust/compass-core/src/algorithm/: mod.rs
rust/compass-core/src/io/: lookup_table.rs  mod.rs
rust/compass-core/src/map/: mod.rs  query.rs  rtree.rs
rust/compass-core/src/model/: mod.rs  units.rs
rust/compass-core/src/plugin/: plugin_error.rs
rust/compass-core/src/test/: mocks.rs  mod.rs
rust/compass-core/src/util/: duration_extension.rs  fs_utils.rs  io_utils.rs  mod.rs  read_only_lock.rs
rust/compass-powertrain/: Cargo.toml  README.md
rust/compass-powertrain/onnx-runtime/: README.md
rust/compass-powertrain/src/: lib.rs
rust/compass-powertrain/src/routee/: mod.rs  model_type.rs  onnx.rs  prediction_model.rs  routee_onnx.rs  routee_random_forest.rs  smart_core_energy_model.rs  speed_grade_model.rs  speed_grade_model_service.rs
rust/compass-prototype/: Cargo.toml
rust/compass-prototype/src/: algorithm.rs  graph.rs  lib.rs  map.rs  mod.rs  powertrain.rs  time_of_day_speed.rs
rust/compass-tomtom/: Cargo.toml
rust/compass-tomtom/src/: lib.rs
rust/compass-tomtom/src/graph/: mod.rs  tomtom_edge_list.rs  tomtom_graph.rs  tomtom_graph_config.rs  tomtom_graph_error.rs  tomtom_vertex_list.rs
rust/compass-tomtom/src/io/: mod.rs
rust/compass-tomtom/src/speed/: mod.rs  netw_to_speed_profile.rs  network_id.rs  profile_to_speed_per_time_slot.rs  simple_traffic_direction.rs  speed_lookup_error.rs  tomtom_speeds.rs  validity_direction.rs  weekday.rs  weekday_speed_profile_id.rs
rust/routee-compass/: Cargo.toml  README.md
rust/routee-compass-core/: Cargo.toml  README.md
rust/routee-compass-core/src/: doc.md  lib.rs
rust/routee-compass-core/src/algorithm/: mod.rs
rust/routee-compass-core/src/config/: compass_configuration_error.rs  compass_configuration_field.rs  config_json_extension.rs  mod.rs  one_or_many.rs
rust/routee-compass-core/src/model/: mod.rs  resources.rs
rust/routee-compass-core/src/util/: compact_ordered_hash_map.rs  duration_extension.rs  io_utils.rs  mod.rs  multiset.rs  priority_queue.rs  progress.rs  specialized_hash_map.rs
rust/routee-compass-macros/: Cargo.toml  README.md
rust/routee-compass-macros/src/: lib.rs
rust/routee-compass-powertrain/: Cargo.toml  README.md  build.rs
rust/routee-compass-powertrain/.cargo/: config.toml
rust/routee-compass-powertrain/onnx-runtime/: README.md
rust/routee-compass-powertrain/src/: doc.md  lib.rs
rust/routee-compass-powertrain/src/model/: battery_frontier_model.rs  bev_energy_model.rs  charging_station_locator.rs  energy_model_builder.rs  energy_model_ops.rs  energy_model_service.rs  energy_traversal_model.rs  fieldname.rs  ice_energy_model.rs  mod.rs  phev_energy_model.rs
rust/routee-compass-powertrain/src/routee/: energy_model_ops.rs  energy_model_service.rs  energy_traversal_model.rs  mod.rs  model_type.rs  prediction_model.rs  speed_grade_energy_model.rs  speed_grade_energy_model_service.rs  speed_grade_generic_model.rs  speed_grade_model.rs  speed_grade_model_ops.rs  speed_grade_model_service.rs  speed_grade_phev_model.rs  vehicle.rs
rust/routee-compass-py/: Cargo.toml  README.md
rust/routee-compass-py/src/: app_graph_ops.rs  app_wrapper.rs  compass_app_py.rs  compass_app_py_builder.rs  doc.md  lib.rs
rust/routee-compass/benches/: README.md  denver_bench.rs
rust/routee-compass/src/: doc.md  lib.rs  main.rs
rust/routee-compass/src/app/: bindings.rs  compass_app_error.rs  mod.rs
rust/routee-compass/src/plugin/: mod.rs  plugin_config.rs  plugin_error.rs
rust/src/: algorithm.rs  graph.rs  ice.onnx  lib.rs  main.rs  map.rs  powertrain.rs  routee.rs  sketch.rs  time_of_day_speed.rs
rust/src/algorithm/search/: edge_traversal.rs  mod.rs  search_error.rs
rust/src/implementations/graph/: default_directed_graph.rs  mod.rs
rust/src/implementations/traversal/: mod.rs  travel_time_traversal.rs
rust/src/model/: mod.rs
rust/src/model/cost/: cost.rs  function.rs  metric.rs  mod.rs
rust/src/model/graph/: directed_graph.rs  edge.rs  edge_id.rs  graph_error.rs  mod.rs  vertex.rs  vertex_id.rs
rust/src/model/map/: mod.rs  road_map.rs  road_map_error.rs
rust/src/model/property/: edge.rs  property_table.rs  road_class.rs  vertex.rs
rust/src/model/traversal/: mod.rs  traversal_model.rs
rust/src/model/units/: centimeters.rs  cm_per_second.rs  millis.rs  milliseconds.rs  mod.rs  ordinate.rs  seconds.rs
rust/src/prototype/: algorithm.rs  graph.rs  map.rs  mod.rs  powertrain.rs  stop_costs.rs  time_of_day_speed.rs
(+1285 files in other folders)
