[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nrel.routee.compass"
version = "0.12.1"
description = "An eco-routing tool build upon RouteE-Powertrain"
readme = "README.md"
documentation = "nrel.github.io/routee-compass"
requires-python = ">=3.10,<3.14"
authors = [{ name = "National Renewable Energy Laboratory" }]
license = { text = "BSD 3-Clause License Copyright (c) 2023, Alliance for Sustainable Energy, LLC" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
keywords = ["eco routing"]
dependencies = ["tomlkit>=0.11.0,<1.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "maturin>=1.0,<2.0",
    "jupyter-book>=1.0,<2.0",
    "ruff>=0.1.0,<1.0",
    "sphinx-book-theme>=1.0.0,<2.0",
    "mypy>=1.0.0,<2.0",
    "jupyterlab>=4.0.0,<5.0",
    "boxsdk>=3.0.0,<4.0",
    "types-requests>=2.28.0,<3.0",
]
osm = [
    "osmnx>=2.0.5,<3.0",
    "rio-vrt>=0.3.1,<1.0",
    "folium>=0.12,<1.0",
    "mapclassify>=2.8.1,<3.0",
    "requests>=2.28.0,<3.0",
    "geopandas>=1.1.1,<2.0",
    "shapely>=2.0.0,<3.0",
    "networkx>=3.0,<4.0",
    "folium>=0.14.0,<1.0",
    "pandas>=2.0.0,<3.0",
    "numpy>=1.26,<3.0",
    "rasterio>=1.3.0,<2.0",
    "matplotlib>=3.7.0,<4.0",
    "seaborn>=0.12.0,<1.0",
]
all = ["nrel.routee.compass[osm]", "nrel.routee.compass[dev]"]

[project.urls]
Homepage = "https://github.com/NREL/routee-compass"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "nrel.routee.compass.routee_compass_py"
manifest-path = "rust/routee-compass-py/Cargo.toml"
include = [
    "python/nrel/routee/compass/resources/models/*.bin",
    "python/nrel/routee/compass/resources/*.toml",
    "LICENSE.md",
    "README.md",
]
exclude = ["rust/routee-compass-powertrain/onnxruntime/**"]

[tool.mypy]
mypy_path = "python"
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
strict = true
disallow_untyped_calls = false
exclude = ["docs", "build/", "dist/"]
