[workspace]
resolver = "2"
members = [
    "routee-compass-core",
    "routee-compass-powertrain",
    "routee-compass",
    "routee-compass-py",
    "routee-compass-macros",
]

[workspace.dependencies]
inventory = { version = "0.3.21" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
rayon = "1.10.0"
geo = { version = "0.30.0", features = ["use-serde"] }
geo-traits = "0.2.0"
geo-types = "0.7.16"
geojson = { version = "0.24.2" }
rstar = "0.12.2"
thiserror = "2.0.12"
flate2 = "1.1.1"
kdam = "0.6.2"
log = "0.4.27"
env_logger = "0.11.8"
csv = { version = "1.3.1" }
itertools = { version = "0.14.0" }
chrono = "0.4.40"
regex = "1.11.1"
wkt = { version = "0.12.0", features = ["serde"] }
wkb = "0.8.0"
config = "0.15.11"
ordered-float = { version = "5.0.0", features = ["serde"] }
allocative = "0.3.4"
indoc = "2.0.6"
uom = { version = "0.37.0", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["full"] }
