[workspace]
resolver = "2"
members = [
    "routee-compass",
    "routee-compass-core",
    "routee-compass-macros",
    "routee-compass-powertrain",
    "routee-compass-py",
]

[workspace.dependencies]
allocative = "0.3.4"
approx = "0.5.1"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.40"
clap = { version = "4.3.19", features = ["derive"] }
config = "0.15.11"
criterion = "0.6.0"
csv = { version = "1.3.1" }
derive_more = { version = "2.0.1", features = ["full"] }
env_logger = "0.11.8"
flate2 = "1.1.1"
geo = { version = "0.30.0", features = ["use-serde"] }
geo-traits = "0.2.0"
geo-types = "0.7.16"
geojson = { version = "0.24.2" }
indexmap = "2.11.4"
indoc = "2.0.6"
inventory = { version = "0.3.21" }
itertools = { version = "0.14.0" }
kdam = "0.6.2"
log = "0.4.27"
lru = "0.14.0"
ndarray = "0.16.1"
ninterp = "0.7.0"
ordered-float = { version = "5.0.0", features = ["serde"] }
ordered_hash_map = { version = "0.4.0", features = ["serde"] }
priority-queue = "2.0.2"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.11.1"
rstar = "0.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde_repr = "0.1"
smartcore = { version = "=0.4.0", features = ["serde"] }                      # random forest
syn = { version = "2.0", features = ["full"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
topological-sort = "0.2.2"
uom = { version = "0.36.0", features = ["serde"] }
wkb = "0.8.0"
wkt = { version = "0.12.0", features = ["serde"] }
