[workspace]
resolver = "2"
members = [
    "routee-compass",
    "routee-compass-core",
    "routee-compass-macros",
    "routee-compass-powertrain",
    "routee-compass-py",
]

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
allocative = "0.3.4"
approx = "0.5.1"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.42"
clap = { version = "4.5.52", features = ["derive"] }
config = "0.15.19"
criterion = "0.8.0"
csv = { version = "1.4.0" }
derive_more = { version = "2.0.1", features = ["full"] }
env_logger = "0.11.8"
flate2 = "1.1.5"
geo = { version = "0.32.0", features = ["use-serde"] }
geo-traits = "0.3.0"
geo-types = "0.7.17"
geojson = { version = "0.24.2" }
indexmap = "2.12.0"
indoc = "2.0.7"
inventory = { version = "0.3.21" }
itertools = { version = "0.14.0" }
kdam = "0.6.3"
log = "0.4.28"
lru = "0.16.2"
ndarray = "=0.17.1" # forces correct transitive dependency on ndarray by ninterp 0.8.0
ninterp = "0.8.0"
ordered-float = { version = "5.1.0", features = ["serde"] }
ordered_hash_map = { version = "0.5.0", features = ["serde"] }
priority-queue = "2.7.0"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
rstar = "0.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_repr = "0.1"
smartcore = { version = "=0.4.0", features = ["serde"] }                      # random forest
syn = { version = "2.0", features = ["full"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
topological-sort = "0.2.2"
uom = { version = "=0.36.0", features = ["serde"] }
wkb = "0.9.1"
wkt = { version = "0.14.0", features = ["serde"] }
