[package]
name = "compass-app"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
compass-core = { path = "../compass-core" }
compass-tomtom = { path = "../compass-tomtom" }
compass-powertrain = { path = "../compass-powertrain" }
thiserror = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
csv = { workspace = true }
geo = { workspace = true }
rstar = { workspace = true }
wkt = { version = "0.10.3", features = ["serde"] }
env_logger = { workspace = true }
kdam = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
serde_repr = "0.1"
rand = "0.8.5"
chrono = { workspace = true }
config = "0.13.3"
clap = { version = "4.3.19", features = ["derive"] }
itertools = { workspace = true }
