[package]
name = "compass-core"
version = "0.1.0"
edition = "2021"
exclude = ["test/"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
rayon = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
geo = { workspace = true }
anyhow = "1.0.70"
bincode = "1.3.3"
rstar = "0.10.0"
uom = { workspace = true, features = ["use_serde"] }
ordered-float = { version = "3.7.0", features = ["serde"] }
smartcore = { version = "0.3.1", features = ["serde"] }
derive_more = "0.99.0"
keyed_priority_queue = "0.4.1"

[dev-dependencies]
csv = { workspace = true }
