[package]
name = "compass-core"
version = "0.1.0"
edition = "2021"
exclude = ["test/"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
geo = { workspace = true }
anyhow = "1.0.70"
bincode = "1.3.3"
rstar = "0.10.0"
ordered-float = { version = "3.7.0", features = ["serde"] }
smartcore = { version = "0.3.1", features = ["serde"] }
derive_more = "0.99.0"
priority-queue = "1.3.2"
csv = { workspace = true }
kdam = { workspace = true }
log = { workspace = true }
itertools = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
