[package]
name = "compass-powertrain"
version = "0.1.0"
edition = "2021"


[dependencies]
compass-core = { path = "../compass-core" }
smartcore = { version = "0.3.1", features = ["serde"] } # random forest
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_repr = "0.1"