[package]
name = "compass-powertrain"
version = "0.1.0"
edition = "2021"


[dependencies]
compass-core = { path = "../compass-core" }
smartcore = { version = "0.3.1", features = ["serde"] } # random forest
thiserror = { workspace = true }
log = { workspace = true }
uom = { workspace = true }
geo = { workspace = true }
bincode = "1.3.3"
env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_repr = "0.1"
serde_json = { workspace = true }
ndarray = "0.15"
onnxruntime = "0.0.14"
