[package]
name = "compass-powertrain"
version = "0.1.0"
edition = "2021"
readme = "README.md"


[dependencies]
compass-core = { path = "../compass-core" }
smartcore = { version = "0.3.1", features = ["serde"] }   # random forest
thiserror = { workspace = true }
log = { workspace = true }
geo = { workspace = true }
bincode = "1.3.3"
env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_repr = "0.1"
serde_json = { workspace = true }
ndarray = "0.15"
ort = "1.15.3"
rayon = { workspace = true }
