[package]
name = "compass-prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
rayon = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module", "anyhow"] }
anyhow = "1.0.70"
bincode = "1.3.3"
geo = "0.24.1"
rstar = "0.10.0"
smartcore = { version = "0.3.1", features = ["serde"] }

[lib]
name = "compass_prototype"
crate-type = ["cdylib"]
