[package]
name = "compass-tomtom"
version = "0.1.0"
edition = "2021"


[dependencies]
compass-core = { path = "../compass-core" }
thiserror = { workspace = true }
flate2 = { workspace = true }
kdam = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
csv = { version = "1.2.2" }
serde = { workspace = true, features = ["derive"] }
serde_repr = "0.1"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "serde"] }