[package]
name = "routee-compass-core"
version = "0.4.0"
edition = "2021"
exclude = ["test/"]
readme = "README.md"
license = "BSD-3-Clause"
description = "The core routing algorithms and data structures of the RouteE-Compass energy-aware routing engine"
homepage = "https://nrel.github.io/routee-compass"
repository = "https://github.com/NREL/routee-compass"
documentation = "https://docs.rs/routee-compass"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
geo = { workspace = true }
ordered-float = { version = "4.1.1", features = ["serde"] }
derive_more = "0.99.0"
priority-queue = "1.3.2"
csv = { workspace = true }
kdam = { workspace = true }
log = { workspace = true }
itertools = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
wkt = { workspace = true }
