[package]
name = "routee-compass-core"
version = "0.10.2"
edition = "2021"
exclude = ["test/", "**/.DS_Store", "target/"]
readme = "README.md"
license = "BSD-3-Clause"
description = "The core routing algorithms and data structures of the RouteE-Compass energy-aware routing engine"
homepage = "https://nrel.github.io/routee-compass"
repository = "https://github.com/NREL/routee-compass"
documentation = "https://docs.rs/routee-compass"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
geo = { workspace = true }
geo-traits = { workspace = true }
ordered-float = { workspace = true }
derive_more = { workspace = true }
priority-queue = "2.0.2"
lru = "0.14.0"
csv = { workspace = true }
kdam = { workspace = true }
log = { workspace = true }
itertools = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
wkt = { workspace = true }
wkb = { workspace = true }
allocative = { workspace = true }
rstar = { workspace = true }
