[package]
name = "routee-compass-core"
version = "0.16.0"
edition = "2021"
exclude = ["test", "**/.DS_Store", "target/"]
readme = "README.md"
license = "BSD-3-Clause"
description = "The core routing algorithms and data structures of the RouteE-Compass energy-aware routing engine"
homepage = "https://nrel.github.io/routee-compass"
repository = "https://github.com/NREL/routee-compass"
documentation = "https://docs.rs/routee-compass"

[dependencies]
allocative = { workspace = true }
approx = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
derive_more = { workspace = true }
env_logger = { workspace = true }
flate2 = { workspace = true }
geo = { workspace = true }
geo-traits = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
kdam = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
ordered-float = { workspace = true }
priority-queue = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rstar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
topological-sort = { workspace = true }
uom = { workspace = true }
wkb = { workspace = true }
wkt = { workspace = true }
