[package]
name = "routee-compass-macros"
version = "0.10.0"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"
description = "Macros for the RouteE-Compass energy-aware routing engine"
homepage = "https://nrel.github.io/routee-compass"
repository = "https://github.com/NREL/routee-compass"
documentation = "https://docs.rs/routee-compass"
exclude = ["test/", ".DS_Store", "target/"]

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true
