[package]
name = "routee-compass-macros"
version = "0.16.0"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"
description = "Macros for the RouteE-Compass energy-aware routing engine"
homepage = "https://nrel.github.io/routee-compass"
repository = "https://github.com/NREL/routee-compass"
documentation = "https://docs.rs/routee-compass"
exclude = ["test", "**/.DS_Store", "target/"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
