[package]
name = "routee-compass-powertrain"
version = "0.10.1"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"
description = "Crate providing integration between RouteE Compass and RouteE Powertrain"
homepage = "https://nrel.github.io/routee-compass"
repository = "https://github.com/NREL/routee-compass"
documentation = "https://docs.rs/routee-compass"
exclude = ["test/", "**/.DS_Store", "target/"]

[dependencies]
routee-compass-core = { path = "../routee-compass-core", version = "0.10.1" }
smartcore = { version = "0.4.0", features = ["serde"] }                       # random forest
thiserror = { workspace = true }
log = { workspace = true }
geo = { workspace = true }
kdam = { workspace = true }
bincode = { version = "2.0.1", features = ["serde"] }
env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_repr = "0.1"
serde_json = { workspace = true }
ordered-float = { workspace = true }
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.9", optional = true }
rayon = { workspace = true }
itertools = { workspace = true }
ninterp = { version = "0.1.0", features = ["serde"] }

[features]
default = []
onnx = ["ort"]
