[package]
name = "routee-compass-powertrain"
version = "0.12.1"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"
description = "Crate providing integration between RouteE Compass and RouteE Powertrain"
homepage = "https://nrel.github.io/routee-compass"
repository = "https://github.com/NREL/routee-compass"
documentation = "https://docs.rs/routee-compass"
exclude = ["test", "**/.DS_Store", "target/"]

[dependencies]
routee-compass-core = { path = "../routee-compass-core", version = "0.12.1" }
smartcore = { version = "=0.4.0", features = ["serde"] }                      # random forest
thiserror = { workspace = true }
log = { workspace = true }
geo = { workspace = true }
uom = { workspace = true, features = ["serde"] }
kdam = { workspace = true }
bincode = { version = "2.0.1", features = ["serde"] }
csv = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_repr = "0.1"
serde_json = { workspace = true }
ordered-float = { workspace = true }
ndarray = "0.16.1"
rayon = { workspace = true }
itertools = { workspace = true }
ninterp = "0.7.0"

[features]
default = []
