[package]
name = "routee-compass-powertrain"
version = "0.16.0"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"
description = "Crate providing integration between RouteE Compass and RouteE Powertrain"
homepage = "https://nrel.github.io/routee-compass"
repository = "https://github.com/NREL/routee-compass"
documentation = "https://docs.rs/routee-compass"
exclude = ["test", "**/.DS_Store", "target/"]

[features]
default = []

[dependencies]
bincode = { workspace = true }
csv = { workspace = true }
env_logger = { workspace = true }
geo = { workspace = true }
itertools = { workspace = true }
kdam = { workspace = true }
log = { workspace = true }
ndarray = { workspace = true }
ninterp = { workspace = true }
ordered-float = { workspace = true }
rayon = { workspace = true }
routee-compass-core = { path = "../routee-compass-core", version = "0.16.0" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
smartcore = { workspace = true }
thiserror = { workspace = true }
uom = { workspace = true }
