[package]
name = "routee-compass-py"
version = "0.10.0"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"
description = "Python bindings to the RouteE-Compass energy-aware routing engine"
homepage = "https://nrel.github.io/routee-compass"
repository = "https://github.com/NREL/routee-compass"
documentation = "https://docs.rs/routee-compass"
exclude = ["test/", ".DS_Store", "target/"]

[dependencies]
routee-compass = { path = "../routee-compass", version = "0.10.0" }
routee-compass-core = { path = "../routee-compass-core", version = "0.10.0" }
routee-compass-macros = { path = "../routee-compass-macros", version = "0.10.0" }
pyo3 = { version = "0.22.2", features = ["extension-module", "serde"] }
serde_json = { workspace = true }
config = { workspace = true }

[lib]
name = "routee_compass_py"
crate-type = ["cdylib"]
