[package]
name = "routee-compass-py"
version = "0.16.0"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"
description = "Python bindings to the RouteE-Compass energy-aware routing engine"
homepage = "https://nrel.github.io/routee-compass"
repository = "https://github.com/NREL/routee-compass"
documentation = "https://docs.rs/routee-compass"
exclude = ["test", "**/.DS_Store", "target/"]

[lib]
name = "routee_compass_py"
crate-type = ["cdylib"]

[dependencies]
config = { workspace = true }
pyo3 = { version = "0.27.1", features = ["extension-module", "serde"] }
routee-compass = { path = "../routee-compass", version = "0.16.0" }
routee-compass-core = { path = "../routee-compass-core", version = "0.16.0" }
routee-compass-macros = { path = "../routee-compass-macros", version = "0.16.0" }
serde_json = { workspace = true }
