[package]
name = "routee-compass"
version = "0.4.0"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"
description = "The RouteE-Compass energy-aware routing engine"
homepage = "https://nrel.github.io/routee-compass"
repository = "https://github.com/NREL/routee-compass"
documentation = "https://docs.rs/routee-compass"
keywords = [
    "eco-routing",
    "route-planning",
    "routing",
    "networks",
    "road-networks",
]
categories = ["science", "science::geo"]

[dependencies]
routee-compass-core = { path = "../routee-compass-core", version = "0.4.0" }
routee-compass-powertrain = { path = "../routee-compass-powertrain", version = "0.4.0" }
thiserror = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
csv = { workspace = true }
geo = { workspace = true }
geo-types = { workspace = true }
geojson = { workspace = true }
rstar = { workspace = true }
wkt = { workspace = true }
env_logger = { workspace = true }
kdam = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
serde_repr = "0.1"
rand = "0.8.5"
chrono = { workspace = true }
config = { workspace = true }
clap = { version = "4.3.19", features = ["derive"] }
itertools = { workspace = true }
