[package]
name = "routee-compass"
version = "0.16.0"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"
exclude = ["test", "**/.DS_Store", "target/"]
description = "The RouteE-Compass energy-aware routing engine"
homepage = "https://nrel.github.io/routee-compass"
repository = "https://github.com/NREL/routee-compass"
documentation = "https://docs.rs/routee-compass"
keywords = [
    "eco-routing",
    "route-planning",
    "routing",
    "networks",
    "road-networks",
]
categories = ["science", "science::geo"]

[lib]
bench = false

[[bin]]
name = "routee-compass"
path = "src/main.rs"
bench = false

[[bin]]
name = "geom-app"
path = "src/bin/geom-app.rs"
bench = false

[dependencies]
allocative = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
csv = { workspace = true }
env_logger = { workspace = true }
flate2 = { workspace = true }
geo = { workspace = true }
geo-traits = { workspace = true }
geo-types = { workspace = true }
geojson = { workspace = true }
indoc = { workspace = true }
inventory = { workspace = true }
itertools = { workspace = true }
kdam = { workspace = true }
log = { workspace = true }
ordered-float = { workspace = true }
ordered_hash_map = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
routee-compass-core = { path = "../routee-compass-core", version = "0.16.0" }
routee-compass-powertrain = { path = "../routee-compass-powertrain", version = "0.16.0" }
rstar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
uom = { workspace = true }
wkb = { workspace = true }
wkt = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "denver_bench"
harness = false
